verification-service/env/dev/set_ing_annotations.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: verification-service-ingress
  annotations:
    alb.ingress.kubernetes.io/group.name: smartparking-dev
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/wafv2-acl-arn: arn:aws:wafv2:ap-northeast-2:796457042442:regional/webacl/waf-mopl-dev-an2/cb84037c-eada-4abf-a262-31125264d4c1
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:796457042442:certificate/b997921e-8f67-4254-b1f7-3b2029961db3
    alb.ingress.kubernetes.io/ssl-policy: "ELBSecurityPolicy-FS-1-2-Res-2020-10"
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
